# CosmicStations

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
CosmicStations/: asgi.py  settings.py  urls.py  wsgi.py
stations/: admin.py  models.py  serializers.py  views.py
