[tool.poetry]
name = "cosmicstations"
version = "0.1.0"
description = ""
authors = ["jendos <huiartman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
